--- a/OpenCV Course/01_Getting_Started_with_Images/01_Getting_Started_with_Images.ipynb
+++ b/OpenCV Course/01_Getting_Started_with_Images/01_Getting_Started_with_Images.ipynb
@@ -6,7 +6,7 @@
         "id": "Q_uUYiDzOnT3"
       },
       "source": [
-        "# <font style=\"color:black\">Getting Started with Images</font>\n",
+        "# Getting Started with Images\n",
         "\n",
         "This notebook will help you take your first steps in learning Image Processing and Computer Vision using OpenCV. You will learn some important lessons using some simple examples. In this notebook, you will learn the following:\n",
         "\n",
@@ -24,7 +24,7 @@
         "id": "frysWYQmOnT6"
       },
       "source": [
-        "##  <font style=\"color:black\">Import Libraries</font>"
+        "## Import Libraries"
       ]
     },
     {
@@ -86,7 +86,7 @@
         "id": "ZPn4cW6KOnT7"
       },
       "source": [
-        "##  <font style=\"color:black\">Download Assets</font>"
+        "## Download Assets"
       ]
     },
     {
@@ -176,7 +176,7 @@
         "id": "kOXWvNrIOnT9"
       },
       "source": [
-        "##  <font style=\"color:black\">Display Image Directly</font>\n",
+        "## Display Image Directly\n",
         "We will use the following as our sample images. We will use the ipython image function to load and display the image."
       ]
     },
@@ -252,11 +252,11 @@
         "id": "4fvYSb03OnT-"
       },
       "source": [
-        "# <font style=\"color:black\">Reading images using OpenCV</font>\n",
+        "# Reading images using OpenCV\n",
         "\n",
         "OpenCV allows reading different types of images (JPG, PNG, etc). You can load grayscale images, color images or you can also load images with Alpha channel. It uses the **`cv2.imread()`** function which has the following syntax:\n",
         "\n",
-        "### <font color=\"green\">Function Syntax </font>\n",
+        "### Function Syntax\n",
         "\n",
         "``` python\n",
         "retval = cv2.imread( filename[, flags] )\n",
@@ -279,7 +279,7 @@
         "3. **`cv2.IMREAD_UNCHANGED`** or **`-1`**: Loads image as such including alpha channel.\n",
         "\n",
         "\n",
-        "### <font color=\"green\">OpenCV Documentation</font>\n",
+        "### OpenCV Documentation\n",
         "\n",
         "1. **`Imread`**:  <a href=\"https://docs.opencv.org/4.5.1/d4/da8/group__imgcodecs.html#ga288b8b3da0892bd651fce07b3bbd3a56\" target=\"_blank\">Documentation link</a>\n",
         "\n",
@@ -764,7 +764,7 @@
         "\n",
         "* **`cv2.merge()`** Merges several arrays to make a single multi-channel array. All the input matrices must have the same size.\n",
         "\n",
-        "### <font style=\"color:rgb(8,133,37)\">OpenCV Documentation</font>\n",
+        "### <font style=\"color:rgb(8,133,37)\">OpenCV Documentation\n",
         "\n",
         "<a href=\"https://docs.opencv.org/4.5.1/d2/de8/group__core__array.html#ga0547c7fed86152d7e9d0096029c8518a\" target=\"_blank\">Documentation link</a>"
       ]
@@ -837,7 +837,7 @@
         "\n",
         "**`cv2.cvtColor()`** Converts an image from one color space to another. The function converts an input image from one color space to another. In case of a transformation to-from RGB color space, the order of the channels should be specified explicitly (RGB or BGR). Note that the default color format in OpenCV is often referred to as RGB but it is actually BGR (the bytes are reversed). So the first byte in a standard (24-bit) color image will be an 8-bit Blue component, the second byte will be Green, and the third byte will be Red. The fourth, fifth, and sixth bytes would then be the second pixel (Blue, then Green, then Red), and so on.\n",
         "\n",
-        "### <font style=\"color:rgb(8,133,37)\">Function Syntax </font>\n",
+        "### <font style=\"color:rgb(8,133,37)\">Function Syntax \n",
         "``` python\n",
         "dst = cv2.cvtColor( src, code )\n",
         "```\n",
@@ -850,7 +850,7 @@
         "\n",
         "2. `code` color space conversion code (see ColorConversionCodes).\n",
         "\n",
-        "### <font style=\"color:rgb(8,133,37)\">OpenCV Documentation</font>\n",
+        "### <font style=\"color:rgb(8,133,37)\">OpenCV Documentation\n",
         "\n",
         "1. **`cv2.cvtColor`**: <a href=\"https://docs.opencv.org/3.4/d8/d01/group__imgproc__color__conversions.html#ga397ae87e1288a81d2363b61574eb8cab\" target=\"_blank\">Documentation link</a>  \n",
         "\n",
@@ -1031,7 +1031,7 @@
         "The function imwrite saves the image to the specified file. The image format is chosen based on the filename extension (see cv::imread for the list of extensions). In general, only 8-bit single-channel or 3-channel (with 'BGR' channel order) images can be saved using this function (see the OpenCV documentation for further details).\n",
         "\n",
         "\n",
-        "### <font style=\"color:rgb(8,133,37)\">Function Syntax </font>\n",
+        "### <font style=\"color:rgb(8,133,37)\">Function Syntax \n",
         "``` python\n",
         "cv2.imwrite( filename, img[, params] )\n",
         "```\n",
@@ -1042,7 +1042,7 @@
         "\n",
         "2. `img`: Image or Images to be saved.\n",
         "\n",
-        "### <font style=\"color:rgb(8,133,37)\">OpenCV Documentation</font>\n",
+        "### <font style=\"color:rgb(8,133,37)\">OpenCV Documentation\n",
         "\n",
         "1. **`Imwrite`**: <a href=\"https://docs.opencv.org/4.5.1/d4/da8/group__imgcodecs.html#gabbc7ef1aa2edfaa87772f1202d67e0ce\" target=\"_blank\">Documentation link</a>\n",
         "\n",
