--- a/Lab Experiments/Exp-6/Exp-6.ipynb
+++ b/Lab Experiments/Exp-6/Exp-6.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
     "    plt.title(titles[i])\n",
     "    plt.axis('off')\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()4"
    ]
   },
   {
